--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -53,6 +53,7 @@ height: 40px;
   .navbar .navbar__content .navbar__mobile,
   .navbar .navbar__content .navbar__mobile .mobile__links {
     display: none;
+    border-radius: 10px;
   }
   
   @media only screen and (max-width: 768px) {
@@ -62,6 +63,7 @@ height: 40px;
   
     .navbar .navbar__content .navbar__mobile {
       display: flex;
+      
       align-items: center;
     }
   
@@ -69,17 +71,19 @@ height: 40px;
       width: 3.6rem;
       height: 3.6rem;
     }
-  
+    .language-selector {
+      margin-left: 15%;
+    }
     .navbar .navbar__content .navbar__mobile.active .mobile__links {
       display: flex;
       flex-direction: column;
-      background-color: #00025e86;
+      background-color: #2d2e46f6;
       width: 100%;
       position: absolute;
       top: 98%;
       left: 0;
       padding: 1rem 0;
-      box-shadow: 0 0.4rem 0.5rem rgba(255, 255, 255, 0.1);
+      box-shadow: 0 0.9rem 0.9rem rgba(255, 255, 255, 0.1);
       z-index: 1;
     }
   
@@ -98,7 +102,7 @@ height: 40px;
   .navbar::before {
     content: "";
     position: absolute;
-    bottom: -5px; /* Posição do reflexo abaixo do botão */
+    bottom: -5px;
     left: 0;
     width: 100%;
     height: 15px;
@@ -134,6 +138,14 @@ height: 40px;
     display: inline-block;
 }
 
+.language-selector-mobile {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+
 .language-selector .current-language {
     display: flex;
     align-items: center;
@@ -161,6 +173,34 @@ height: 40px;
     margin: 0;
 }
 
+.language-dropdown-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  background-color: rgb(52, 51, 68);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  width: 180px;
+  position: absolute;
+  border-radius: 8px;
+  padding: 0;
+  margin: 0;
+}
+
+.language-dropdown-mobile li {
+  display: flex;
+  align-items: center;
+  padding: 8px 0; 
+  width: auto;
+  cursor: pointer;
+}
+
+.language-dropdown-mobile-text {
+  font-family: serif;
+  font-size: 15px;
+  color: #dadbeb;
+}
+
 .language-dropdown li {
     display: flex;
     align-items: center;
@@ -168,14 +208,71 @@ height: 40px;
     cursor: pointer;
 }
 
+
 .language-dropdown li:hover {
     background-color: #78799786;
 }
+
 
 .language-selector:hover .language-dropdown {
     display: block;
 }
  
+.mobile__links li {
+  position: relative;
+  overflow: hidden; 
+}
+
+.mobile__links li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%; 
+  width: 100%;
+  height: 100%;
+  background-color: #76778d; 
+  z-index: -1; 
+  transition: left 0.4s ease-in-out; 
+}
+
+.mobile__links li:hover::before {
+  left: 0; 
+}
+
+.mobile__links li a {
+  position: relative;
+  z-index: 1; 
+}
+
+
+
+.language-dropdown-mobile li {
+  position: relative; 
+  overflow: hidden; 
+}
+
+.language-dropdown-mobile li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%; 
+  width: 100%;
+  height: 100%;
+  background-color: #76778d; 
+  z-index: -1;
+  transition: left 0.4s ease-in-out; 
+}
+
+.language-dropdown-mobile li:hover::before {
+  left: 0;
+}
+
+.language-dropdown-mobile li a {
+  position: top; 
+  z-index: 1;
+}
+
+
   @keyframes reflect {
     0% {
       transform: translateX(-100%);
