--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -261,18 +261,40 @@ p:not(:last-of-type),
 
 @media (max-width: 768px) {
   .contact-buttons {
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    margin-inline: 20%;
+    justify-content: center;
   }
-
+  
   .contact-button {
-    width: 50px; 
-    height: 50px; 
-    padding: 10px; 
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .contact-button img {
+    width: 40px;
+  }
+  
+  .contact-button i {
+    margin-right: 5px;
   }
 
-  .contact-button i {
-    margin-right: 5px; 
+  .skill, .category {
+    font-size: 15px;
+  }
+  .bar {
+    height: 5px;
+  }
+
+  .image img {
+    width: 80px;
+    height: auto;
   }
 }
 
