--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,6 +316,60 @@ p:not(:last-of-type),
   }
 }
 
+.click-to-copy {
+  margin-top: -90%;
+  font-size: 12px;
+  background: linear-gradient(90deg, #a572ff, #58a2ff, #37b7ff);
+  background-clip: text;
+}
+
+.custom-alert {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(135deg, #a672ffe1, #58a2ffe1, #37b6ffe1); /* Gradiente de fundo */
+  color: white;
+  padding: 20px 40px;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  font-size: 18px;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.custom-alert.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.custom-alert p {
+  margin: 0;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.close-alert {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin-top: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.close-alert:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 
 p:hover {
   transform: scale(1.05);
@@ -395,7 +449,6 @@ p:hover {
 @keyframes animation {
 
 }
-
 
 #reference {
   color: #ee69ff;
