--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -290,3 +290,19 @@ height: 40px;
       transform: translateX(-100%);
     }
   }
+
+
+.mobile__links.active {
+    left: 0;
+}
+
+.mobile__links li:nth-child(1) { transition-delay: 0.1s; }
+.mobile__links li:nth-child(2) { transition-delay: 0.2s; }
+.mobile__links li:nth-child(3) { transition-delay: 0.3s; }
+.mobile__links li:nth-child(4) { transition-delay: 0.4s; }
+.mobile__links li:nth-child(5) { transition-delay: 0.5s; }
+
+
+.mobile__links li a:hover {
+    color: #d2d4ec;
+}
